Fixing all local project

--- a/.env-example
+++ b/.env-example
@@ -4,7 +4,10 @@ PER_PAGE = 'CHANGE-ME'
 SECRET_KEY = 'CHANGE-ME'
 
 # 0 = False - 1 = True
-DEBUG = 0
+DEBUG_VALUE = 0
+
+# your domain (localhost if you're local)
+ALLOWED_HOSTS_VALUE = 'domain.com'
 
 # 0 = False - 1 = True
 SELENIUM_HEADLESS = 0
