--- a/.env-example
+++ b/.env-example
@@ -9,6 +9,9 @@ DEBUG_VALUE = 0
 # your domain (localhost if you're local)
 ALLOWED_HOSTS_VALUE = 'domain.com'
 
+# Detect command
+DETECT_COMMAND = 'yolo/comand/path'
+
 # 0 = False - 1 = True
 SELENIUM_HEADLESS = 0
 
