Fixed up DEBUG and ALLOWED_HOSTS

--- a/.env-example
+++ b/.env-example
@@ -3,11 +3,9 @@ PER_PAGE = 'CHANGE-ME'
 # Django secret key
 SECRET_KEY = 'CHANGE-ME'
 
-# 0 = False - 1 = True
-DEBUG_VALUE = 0
+# FALSE TRUE
+DEBUG_VALUE = 'FALSE'
 
-# your domain (localhost if you're local)
-ALLOWED_HOSTS_VALUE = 'domain.com'
 
 # Detect command
 DETECT_COMMAND = 'yolo/comand/path'
